<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.InfoFragment" >

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/background"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/headLine"
            style="@style/headLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/BMIandBMR"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView" />

        <TextView
            android:id="@+id/ageText"
            style="@style/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="75dp"
            android:text="@string/age"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/headLine" />

        <TextView
            android:id="@+id/heightText"
            style="@style/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="50dp"
            android:text="@string/height"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/ageText" />

        <TextView
            android:id="@+id/weightText"
            style="@style/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="50dp"
            android:text="@string/Weight"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/heightText" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="end"
            app:constraint_referenced_ids="weightText,heightText,ageText"
            tools:layout_editor_absoluteX="87dp"
            tools:layout_editor_absoluteY="168dp" />

        <SeekBar
            android:id="@+id/heightBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="20dp"
            android:max="250"
            android:progress="180"
            app:layout_constraintBottom_toBottomOf="@+id/heightText"
            app:layout_constraintEnd_toStartOf="@+id/heightEdit"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/barrier"
            app:layout_constraintTop_toBottomOf="@+id/ageEdit"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/ageEdit"
            style="@style/text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:autofillHints=""
            android:ems="10"
            android:inputType="number"
            android:textAlignment="center"
            app:layout_constraintBaseline_toBaselineOf="@+id/ageText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/barrier" />

        <EditText
            android:inputType="number"
            android:id="@+id/heightEdit"
            style="@style/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/heightBar"
            app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="@+id/heightBar" />

        <EditText
            android:inputType="number"
            android:id="@+id/weightEdit"
            style="@style/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/weightBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/weightBar" />

        <SeekBar
            android:id="@+id/weightBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="20dp"
            android:max="200"
            android:progress="80"
            app:layout_constraintBottom_toBottomOf="@+id/weightText"
            app:layout_constraintEnd_toStartOf="@+id/weightEdit"
            app:layout_constraintStart_toEndOf="@+id/barrier"
            app:layout_constraintTop_toBottomOf="@+id/heightBar" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginBottom="50dp"
            app:layout_constraintBottom_toTopOf="@+id/calculateButton"
            app:layout_constraintStart_toEndOf="@+id/barrier">

            <RadioButton
                android:id="@+id/manRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/white"
                android:checked="true"
                android:drawableEnd="@drawable/human_male"
                android:drawableTint="@color/white"
                android:text="Man"
                android:textColor="@color/white" />

            <RadioButton
                android:id="@+id/womanRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/white"
                android:drawableEnd="@drawable/human_female"
                android:drawableTint="@color/white"
                android:text="Woman"
                android:textColor="@color/white" />
        </RadioGroup>

        <Button
            android:id="@+id/calculateButton"
            style="@style/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:backgroundTint="@color/colotBtn"
            android:text="@string/calculate"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>